update to use jdk8 compat method